recursion.logo.spiral.Spiral.scala.error
Erreur de compilation :
Spiral:3: error: '(' expected but identifier found.
  if steps==0
     ^